# lcde

./: CMakeLists.txt  README.md  main.cpp
lcde/inc/: lcde.h
lcde/src/: lcde.cpp  slots.cpp
mono_lcd/inc/: mono_lcd.h
mono_lcd/src/: mono_lcd.cpp
